--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <finalName>demo</finalName>                   
+                </configuration>
             </plugin>
         </plugins>
     </build>
