--- a/k8s/production/app-production.yaml
+++ b/k8s/production/app-production.yaml
@@ -1,7 +1,7 @@
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
-  name: upload-demo-${TARGET_ROLE}
+  name: upload-demo
 spec:
   replicas: 2
   template:
@@ -9,11 +9,10 @@ spec:
       name: upload-demo
       labels:
         app: upload-demo
-        role: {TARGET_ROLE}
     spec:
       containers:
       - name: demo
-        image: demo:${BUILD_NUMBER}
+        image: demo
         resources:
           limits:
             memory: "500Mi"
