--- a/k8s/production/app-production.yaml
+++ b/k8s/production/app-production.yaml
@@ -1,27 +1,19 @@
 kind: Deployment
-apiVersion: v1
+apiVersion: extensions/v1beta1
 metadata:
   name: upload-demo
 spec:
   replicas: 2
   template:
     metadata:
-      name: upload-demo
       labels:
         app: upload-demo
     spec:
       containers:
       - name: demo
-        image: demo
-        resources:
-          limits:
-            memory: "500Mi"
-            cpu: "100m"
-        imagePullPolicy: Always
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 8080
+        image: us-ashburn-1.ocir.io/unifor/celula09/demo-springboot:latest
         ports:
         - name: upload-demo
           containerPort: 8080
+      imagePullSecrets:
+      - name: $KUBERNETES_SECRET_NAME
