--- a/k8s/production/app-production.yaml
+++ b/k8s/production/app-production.yaml
@@ -1,20 +1,18 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: upload-demo
+  name: demo
 spec:
   replicas: 2
   template:
     metadata:
       labels:
-        name: upload-demo
-        app: upload-demo
+        app: demo
     spec:
       containers:
       - name: demo
         image: us-ashburn-1.ocir.io/unifor/celula09/demo-springboot:latest
         ports:
-        - name: upload-demo
           containerPort: 8080
       imagePullSecrets:
       - name: $KUBERNETES_SECRET_NAME
